ckeck only using with po